# mwcas

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
include/dbgroup/atomic/mwcas/: utility.hpp
include/dbgroup/atomic/mwcas/deadlock_free/: mwcas_descriptor.hpp
include/dbgroup/atomic/mwcas/lock_free/: aopt_descriptor.hpp  casn_descriptor.hpp  mwcas_descriptor.hpp  mwcas_descriptor_weak.hpp
include/mwcas/: mwcas_descriptor.hpp  mwcas_entry.hpp  mwcas_manager.hpp  utility.hpp
include/mwcas/casn/: common.hpp  mwcas_descriptor.hpp  mwcas_entry.hpp  mwcas_field.hpp  rdcss_descriptor.hpp  rdcss_field.hpp
include/mwcas/component/: common.hpp  mwcas_field.hpp  mwcas_target.hpp
include/mwcas/components/: common.hpp  mwcas_field.hpp  mwcas_target.hpp
src/: cas_n_field.hpp  common.hpp  mwcas_descriptor.hpp  mwcas_entry.hpp  mwcas_field.hpp  mwcas_manager.hpp  rdcss_descriptor.hpp  rdcss_field.hpp  rdcss_target_word.hpp
src/deadlock_free/: mwcas_descriptor.cpp
src/lock_free/: aopt_descriptor.cpp  casn_descriptor.cpp  mwcas_descriptor.cpp  mwcas_descriptor_weak.cpp
test/: CMakeLists.txt  cas_n_field_test.cpp  common.hpp  mwcas_descriptor_test.cpp  mwcas_descriptors_test.cpp  mwcas_entry_test.cpp  mwcas_field_test.cpp  mwcas_manager_test.cpp  mwcas_target_test.cpp  rdcss_descriptor_test.cpp  rdcss_field_test.cpp  rdcss_target_word_test.cpp
